--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,58 @@
-Flask==0.10.1
-Flask-Migrate==1.2.0
-Flask-SQLAlchemy==1.0
-Flask-Script==2.0.5
-Jinja2==2.7.2
-Mako==1.0.0
-MarkupSafe==0.23
-SQLAlchemy==0.9.4
-Werkzeug==0.9.4
-alembic==0.6.5
-gunicorn==18.0
-itsdangerous==0.24
-psycopg2==2.5.3
-redis==2.10.1
+Django==1.5.4
+PyRSS2Gen==1.0.0
+Twisted==12.2.0
+altgraph==0.10.1
+bdist-mpkg==0.4.4
+bonjour-py==0.3
+macholib==1.5
+matplotlib==1.1.1
+modulegraph==0.10.1
+mongoengine==0.8.4
+numpy==1.6.2
+py2app==0.7.1
+pyOpenSSL==0.13
+pymongo==2.6.3
+pyobjc-core==2.3.2a0
+pyobjc-framework-AddressBook==2.3.2a0
+pyobjc-framework-AppleScriptKit==2.3.2a0
+pyobjc-framework-AppleScriptObjC==2.3.2a0
+pyobjc-framework-Automator==2.3.2a0
+pyobjc-framework-CFNetwork==2.3.2a0
+pyobjc-framework-Cocoa==2.3.2a0
+pyobjc-framework-Collaboration==2.3.2a0
+pyobjc-framework-CoreData==2.3.2a0
+pyobjc-framework-CoreLocation==2.3.2a0
+pyobjc-framework-CoreText==2.3.2a0
+pyobjc-framework-DictionaryServices==2.3.2a0
+pyobjc-framework-ExceptionHandling==2.3.2a0
+pyobjc-framework-FSEvents==2.3.2a0
+pyobjc-framework-InputMethodKit==2.3.2a0
+pyobjc-framework-InstallerPlugins==2.3.2a0
+pyobjc-framework-InstantMessage==2.3.2a0
+pyobjc-framework-InterfaceBuilderKit==2.3.2a0
+pyobjc-framework-LatentSemanticMapping==2.3.2a0
+pyobjc-framework-LaunchServices==2.3.2a0
+pyobjc-framework-Message==2.3.2a0
+pyobjc-framework-OpenDirectory==2.3.2a0
+pyobjc-framework-PreferencePanes==2.3.2a0
+pyobjc-framework-PubSub==2.3.2a0
+pyobjc-framework-QTKit==2.3.2a0
+pyobjc-framework-Quartz==2.3.2a0
+pyobjc-framework-ScreenSaver==2.3.2a0
+pyobjc-framework-ScriptingBridge==2.3.2a0
+pyobjc-framework-SearchKit==2.3.2a0
+pyobjc-framework-ServiceManagement==2.3.2a0
+pyobjc-framework-SyncServices==2.3.2a0
+pyobjc-framework-SystemConfiguration==2.3.2a0
+pyobjc-framework-WebKit==2.3.2a0
+pyobjc-framework-XgridFoundation==2.3.2a0
+python-dateutil==1.5
+pytz==2012d
+scipy==0.11.0
 stevedore==0.15
-virtualenv==1.11.6
+virtualenv==1.10.1
 virtualenv-clone==0.2.5
 virtualenvwrapper==4.3
 wsgiref==0.1.2
+xattr==0.6.4
+zope.interface==3.8.0
